changes and stuff